MAGNOLIA-2638 Increased perm space to ensure we do not run out of space when having many modules.
git-svn-id: file:///home/dlipp/subversion-migration/svn-repo-copy/community/bundle/trunk@22835 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f