@@ -21,7 +21,7 @@ PRGDIR=`dirname "$PRG"`
 #---
 
 if [ "$1" = "start" ] ; then
-    export CATALINA_OPTS="$CATALINA_OPTS -Xms64M -Xmx512M -Djava.awt.headless=true"
+    export CATALINA_OPTS="$CATALINA_OPTS -XX:MaxPermSize=256m -Xms64M -Xmx512M -Djava.awt.headless=true"
     # to enable jmx:
     # export CATALINA_OPTS="$CATALINA_OPTS -Dcom.sun.management.jmxremote.port=12345 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false"
     # to enable debugging:
